prevent active line from falling behind hint info panel

--- a/scss/_editarea.scss
+++ b/scss/_editarea.scss
@@ -1,3 +1,5 @@
+$h-content-menu-btns:1.7rem;
+
 section#file-content{
   display:block;
   width:100%;
@@ -34,6 +36,13 @@ section#file-content{
         > div:last-child{
           margin-bottom:1rem;
         }
+
+        .CodeMirror-activeline{
+          .CodeMirror-linenumber{
+            color:#fff;
+            background-color:#7f1171;
+          }
+        }
       }
     }
 
@@ -50,8 +59,6 @@ section#file-content{
 }
 
 /*content menus*/
-
-$h-content-menu-btns:1.7rem;
 
 section#file-content{ .content-wrap{ .content-menus{
 
@@ -152,6 +159,14 @@ section#file-content{ .content-wrap{ .content-menus{
 section#file-content{ .content-wrap.show-content-menu{ .content-menus{
   display:block;
 } } }
+
+/*split panel views*/
+
+body.split-2panel-rows{
+  section#file-content{
+    bottom:50%;
+  }
+}
 
 /*codemirror hints*/
 
